# Lennar

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.claude/: lennar-field-schema.md  settings.json
civicsignal/: pyproject.toml  requirements.txt
civicsignal/api/: index.py
civicsignal/docs/00-context/: constraints.md
civicsignal/docs/01-product/: phase2-definition.md  prd.md
civicsignal/docs/02-architecture/: connectors.md  phase2-functional-spec.md  system-overview.md
civicsignal/docs/03-execution/: roadmap.md
civicsignal/docs/03-execution/tasks/: 2026-03-03-legistar-debug-summary.md  2026-03-03-projects-grouping-service.md  2026-03-03-signal-schema-and-confidence.md  2026-03-03-signals-api.md  2026-03-03-system-health-and-dry-run-harness.md  README.md
civicsignal/docs/05-metrics/: kpis.md
civicsignal/src/civicsignal/: change_detection.py  change_runner.py  dashboard_ui.py  document_text.py  scheduler.py  search_service.py  signal_runner.py  signals_api.py  system_health.py
civicsignal/src/civicsignal/connectors/: __init__.py  interface.py  models.py  parsers.py  registry.py
civicsignal/tests/: test_change_detection.py  test_connector_parsers.py  test_live_fetch_mode.py  test_projects_service.py  test_registry_router.py  test_search_service.py  test_signal_runner.py  test_signal_schema.py  test_signals_api.py  test_signals_http_api.py
civicsignal/tests/fixtures/: granicus_calendar.html  legistar_telerik_calendar.html
tests/: test_contracts.py  test_harness.py  test_platform_connectors.py  test_scheduler_dry_run.py  test_system_health.py
(+45 files in other folders)
